nouvelle methode avec DataStax Enterprise